--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <title>restaurant</title>
 </head>
 
@@ -546,7 +552,7 @@
                             </div>
                             <div class="Gallery">
                                 <div class="gallery">
-                                    <div class="GalleryImg">
+                                    <div class="GalleryImg   too-big">
                                         <img src="img/drinks images/cofee cappucino.jpg" alt="coffee">
                                     </div>
                                     <div class="GalleryCaption">
