--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
 
         </div>
         </div>
-        <div class="quickSignUp">
+        <!-- temporarily removed -->
+        <!-- <div class="quickSignUp">
             <nav>
                 <form action="">
                     <div class="signup">
@@ -186,7 +187,7 @@
                     </div>
                 </form>
             </nav>
-        </div>
+        </div> -->
         <div class="menu-comeout-main">
             <div class="menu-comeout" id="menu-comeout">
                 <div class="close" style="position: relative; margin-right: 5px;">
@@ -196,11 +197,11 @@
                 </div>
                 <div class="inside">
                     <ul>
-                        <li>Home</li>
-                        <li>Menu</li>
-                        <li>Reservations</li>
-                        <li>Reviews</li>
-                        <li>Blog</li>
+                        <li> <a href="#firstPage" class="menu-li-a">Home</a></li>
+                        <li> <a href="#menu" class="menu-li-a">Menu</a></li>
+                        <li> <a href="#reservations" class="menu-li-a">Reservations</a></li>
+                        <li><a href="#reviews" class="menu-li-a">Reviews</a></li>
+                        <li><a href="#" class="menu-li-a">Blog</a></li>
                     </ul>
                 </div>
             </div>
