--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
 
         <div class="mainNav" id="navbar">
             <nav>
-                <div class="nav" >
+                <div class="nav">
                     <div class="logo">
                         <h1>
                             logo
                         </h1>
-                        
+
                     </div>
                     <div class="menu">
                         <div class="notAvailable">
@@ -202,11 +202,21 @@
                 </div>
                 <div class="inside">
                     <ul>
-                        <li> <a href="#firstPage" class="menu-li-a">Home</a></li>
-                        <li> <a href="#menu" class="menu-li-a">Menu</a></li>
-                        <li> <a href="#reservations" class="menu-li-a">Reservations</a></li>
-                        <li><a href="#reviews" class="menu-li-a">Reviews</a></li>
-                        <li><a href="#" class="menu-li-a">Blog</a></li>
+                        <a href="#firstPage" class="menu-li-a">
+                            <li>Home</li>
+                        </a>
+                        <a href="#menu" class="menu-li-a">
+                            <li>Menu</>
+                        </a>
+                        <a href="#reservations" class="menu-li-a">
+                            <li>Reservations</li>
+                        </a>
+                        <a href="#reviews" class="menu-li-a">
+                            <li>Reviews</li>
+                        </a>
+                        <a href="#" class="menu-li-a">
+                            <li>Blog</li>
+                        </a>
                     </ul>
                 </div>
             </div>
@@ -766,7 +776,7 @@
                                 reservation until it is confirmed by our staff. <br><br><br>
                                 <p>
                                     For any immediate assistance or changes to an existing reservation, please call us
-                                    directly at <br> <span><i class="fi fi-brands-whatsapp"></i> +2349042350500</span>
+                                    directly at <br><br> <span style="color: white;"><i class="fi fi-brands-whatsapp"></i> +2349042350500</span>
                                 </p>
                             </article>
                         </div>
@@ -921,7 +931,7 @@
                             </h4>
                             <textarea name="customerReview" id="CustomerReview" cols="50" rows="10"
                                 placeholder="leave a review...." required></textarea>
-                            <input type="submit">
+                            <input type="submit" style="width: 100%;">
                         </form>
                     </div>
                 </div>
